--- a/css/source/main.scss
+++ b/css/source/main.scss
@@ -8,7 +8,7 @@ $max-width: 1200px;
 // color scheme
 $darkgray: #51566c;
 $gray: #676d86;
-$lightgray: #9498a8;
+$lightgray: #a6a9b7;
 $red: #b71a49;
 $blue: #00638d;
 $orange: #f39100;
