--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -174,6 +174,16 @@ section {
     }
 }
 
+// message if no projects are selected
+.no-projects-selected {
+    color: $lightgray;
+    
+    .project:not(.hidden) ~ & {
+        display: none;
+    }
+}
+
+// project cards
 .project {
     display: inline-block; position: relative; z-index: 2;
     overflow: hidden;
