layout fixes; optimized 'tensquared' screenshot

--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -161,7 +161,7 @@
         
         &.a0 {
             display: inline-block;
-            width: 46px; height: 76px; margin: 0 20px 0 0;
+            width: 46px; height: 76px; margin: 0 20px 0 13px;
 
             &.active, 
             &:hover {
