--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -65,7 +65,11 @@ section {
 /* INTRO / ABOUT SECTION */
 
 #about {
-    // apply flex column to fix the div not centering in IE
+    /* 
+        apply flex column to fix the div not centering in IE
+        
+        https://stackoverflow.com/questions/19371626/flexbox-not-centering-vertically-in-ie/33222765#33222765 
+    */
     display: -ms-flexbox;
     display: -moz-flexbox;
     display: -webkit-box;
@@ -513,7 +517,7 @@ section {
         color: #525252;
         
         &:hover {
-            background: rgba(0,0,0,.1);
+            background: rgba(0,0,0,.15);
         }
         
         &:before {
