--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -1,6 +1,7 @@
 /* NAVIGATION BAR */
 
 #nav {
+    @extend %user-select-none;
     position: fixed; top: 0; right: 0; z-index: 9001;
     width: 100%; height: 76px;
     background-color: white;
