added 'translate-center' and 'border-radius-5px' mixins

--- a/css/source/functions.scss
+++ b/css/source/functions.scss
@@ -6,8 +6,17 @@
     @include text-overflow($type);
 }
 
+%translate-center {
+    top: 50%; left: 50%;
+    @include transform(translate(-50%, -50%));
+}
+
 %user-select-none {
     @include user-select(none);
+}
+
+%border-radius-5px {
+    @include border-radius(5px);
 }
 
 
