--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -161,10 +161,10 @@ p.responsive {
 
 a.responsive,
 button.responsive {
+    @extend %border-radius-5px;
     display: inline-block;
     padding: 1em;
     font-size: 40px; font-size: 3vw; line-height: 1em; text-decoration: none;
-    @include border-radius(5px);
     @include transition(color .3s, background .3s);
 
     @media (min-width: 1201px) {
@@ -206,12 +206,12 @@ a, button {
     @include animation(fade-out 2s 13s, hidden 999s 15s infinite);
     
     &:after {
+        @extend %border-radius-5px;
         content: '';
         display: table-cell;
         padding: 15px 22px;
         background: rgba(0,0,0,.95);
         color: white; font-size: 20px; line-height: 25px;
-        @include border-radius(5px);
     }
 }
 
