--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -65,35 +65,20 @@ section {
 /* INTRO / ABOUT SECTION */
 
 #about {
-    /* 
-        apply flex column to fix the div not centering in IE
-        
-        https://stackoverflow.com/questions/19371626/flexbox-not-centering-vertically-in-ie/33222765#33222765 
-    */
-    display: -ms-flexbox;
-    display: -moz-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-direction: column;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
+    
+    // apply flex column to fix the div not centering in IE, since no height is set
+    // https://stackoverflow.com/a/33222765
+    @include display(flex);
+    @include flex-direction(column);
     
     .flex {
-        display: -ms-flexbox;
-        display: -moz-flexbox;
-        display: -webkit-box;
-        display: flex;
-        -ms-flex-align: center;
-        -moz-flex-align: center;
-        -webkit-box-align: center;
-        align-items: center;
-        -ms-flex-pack: center;
-        -moz-flex-pack: center;
-        -webkit-box-pack: center;
-        justify-content: center;
         position: relative;
         max-width: none; width: auto; min-height: 100vh; padding: 100px 0 30px 0;
+        
+        // center element using flex-box
+        @include display(flex);
+        @include align-items(center);
+        @include justify-content(center);
     }
     
     .center {
