--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -53,7 +53,7 @@
             
             .content {
                 position: absolute; top: 0; right: 0; z-index: 2;
-                max-width: 320px; width: 90%; height: 100%; padding: 76px 0;
+                max-width: 300px; width: 90%; height: 100%; padding: 76px 0;
                 background: white;
                 @include box-shadow(
                     -1px 0 1px rgba(0,0,0,.03),
@@ -99,10 +99,6 @@
                         display: block;
                         height: auto; margin: 5px 0; padding: 20px 0;
                         color: $gray; font-size: 1em; line-height: 1em; text-align: center;
-                        
-                        @include ON_PHONE {
-                            font-size: 24px; line-height: 1em;
-                        }
                         
                         &.a0 {
                             display: none;
@@ -150,6 +146,16 @@
                 
                 .content {
                     @include transform(translate(0,0));
+                }
+            }
+        }
+                
+        @include ON_PHONE {
+            .content {
+                max-width: 230px;
+                
+                .center a {
+                    font-size: 23px; line-height: 1em;
                 }
             }
         }
