--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -230,7 +230,7 @@ section {
     display: inline-block; position: relative;
     
     // 3 cards beside each other
-    width: 32%; margin: 0.5%;
+    width: 32%; margin: 1% 0.5%;
     
     // 2 cards beside each other
     @media (max-width: 1200px) {
